# ict-trading-bot-rs

./: Cargo.toml
src/: bot.rs  config.rs  lib.rs  main.rs  test_helpers.rs
src/backtesting/: data_fetcher.rs  mod.rs  report.rs  runner.rs
src/core/: cisd.rs  kelly.rs  liquidity.rs  mod.rs  pd_arrays.rs  sessions.rs  stddev_projections.rs  stop_loss.rs  structure.rs
src/exchange/: coinbase.rs  historical.rs  mod.rs
src/models/: candle.rs  direction.rs  mod.rs  timeframe.rs
src/strategies/: fractal_engine.rs  mod.rs  signals.rs  weekly_profiles.rs
src/trading/: mod.rs  paper_trader.rs  strategy_refiner.rs  trade_analyzer.rs  trade_record.rs
tests/: integration.rs
tests/common/: mod.rs
